# rit

./: .gitignore  Cargo.toml  README.md  bacon.toml  dev-notes.md
src/: cli.rs  config.rs  consts.rs  helper.rs  lib.rs  main.rs  object.rs  repository.rs
src/object/: tree.rs
