[package]
name = "rit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.14", features = ["derive"]}
configparser = "3.0.4"
flate2 = "1.0.28"
hex = "0.4.3"
homedir = "0.2.1"
itertools = "0.12.1"
sha1 = "0.10.6"
walkdir = "2.5.0"
